carousel.css
html{
    background-color:black;
}
header{
    background-image:url("images/AndyKing0010.jpg");
    background-position: center;
    width:100%;
    height:91vh;
    background-size:100%;
    display:inline-block;
}
h1{
    font-size:4em;
    color:white;
    border-top: 5px solid white;
    border-bottom:5px solid white;
    text-align:center;
    position:relative;
    top:32vh;
    font-family:"Slabo 27px", serif;
    text-shadow: 7px 7px 7px black;
}
header p{
    text-align:center;
    color:white;
    position:relative;
    top:34vh;
    font-size:20px;
    font-family:"Slabo 27px",serif;
    text-shadow: 7px 7px 7px black;
}
.navbar li, a{
    list-style-type: none;
    color:white;
    display:inline-block;
    background-color:transparent;
    padding-left:15px;
    text-decoration:none;
    font-family:"Slabo 27px", serif;
    font-size:1.2em;
}
.navbar{
    position:absolute;
    top:0px;
    right:0px;
    margin:20px;
}
a:hover{
    color:lightblue;
    text-decoration:none;
    cursor:pointer;
}

body {
    padding-bottom: 40px;
    color: #5a5a5a;
    background-color:black;
}


/* MARKETING CONTENT
-------------------------------------------------- */

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
    margin-bottom: 20px;
    text-align: center;
}
.marketing h2 {
    font-weight: normal;
    color:white;
}
.marketing .col-lg-4 p {
    margin-right: 10px;
    margin-left: 10px;
}


/* Featurettes
------------------------- */

.featurette-divider {
    margin: 80px 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
    font-weight: 300;
    line-height: 1;
    letter-spacing: -1px;
}


/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 768px) {
    /* Navbar positioning foo */
    .navbar-wrapper {
        margin-top: 20px;
    }
    .navbar-wrapper .container {
        padding-right: 15px;
        padding-left: 15px;
    }
    .navbar-wrapper .navbar {
        padding-right: 0;
        padding-left: 0;
    }

    .navbar-wrapper .navbar {
        border-radius: 4px;
    }

    /* Bump up size of carousel content */
    .carousel-caption p {
        margin-bottom: 20px;
        font-size: 21px;
        line-height: 1.4;
    }

    .featurette-heading {
        font-size: 50px;
    }
}

@media (min-width: 992px) {
    .featurette-heading {
        margin-top: 13vh;
    }
}
.row{
    margin-top:10vh;
}
.text-muted{
    font-size:.7em;
}
.carousel{
    width:35vw;
}
footer{
    text-align:center;
    color:white;
    position:relative;
    top:25vh;
    font-size:20px;
    text-shadow: 7px 7px 7px black;
}
.languageLogos img{
    width:7vw;
    height:8vh;
}
.modal-body {
    position: relative;
    padding: 15px;
    background-color: black;
}
.modal-body p{
    text-align:center;
    position:relative;
    font-size:16px;
}
.modal-header {
    min-height: 16.43px;
    padding: 15px;
    border-bottom: 1px solid #e5e5e5;
    background-color: black;
}
.modal-title {
    margin: 0;
    line-height: 1.42857143;
    text-align: center;
    font-family: "Slabo 27px", sans-serif;
    font-size: 30px;
    color: white;
    text-shadow: 2px 2px gray;
}
.modal-footer {
    padding: 15px;
    text-align: right;
    border-top: 1px solid #e5e5e5;
    background-color: black;
}
.btn-default {
    color: #333;
    background-color: grey;
    border-color: black;
    font-weight: bold;
    font-family: "Slabo 27px",serif;
}
.btn-group-lg>.btn, .btn-lg {
    padding: 10px 16px;
    font-size: 20px;
    line-height: 1.3333333;
    border-radius: 6px;
}
.glyphicon {
    font-size: 7vh;
    top:26vh;
}
.floating{
    -webkit-animation-name: Floatingx;
    -webkit-animation-duration: 3s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: ease-in-out;
    -moz-animation-name: Floating;
    -moz-animation-duration: 3s;
    -moz-animation-iteration-count: infinite;
    -moz-animation-timing-function: ease-in-out;
    margin-left: 30px;
    margin-top: 5px;

}

@-webkit-keyframes Floatingx{
    from {-webkit-transform:translate(0, 0px);}
    65% {-webkit-transform:translate(0, 15px);}
    to {-webkit-transform: translate(0, -0px);    }
}

@-moz-keyframes Floating{
    from {-moz-transform:translate(0, 0px);}
    65% {-moz-transform:translate(0, 15px);}
    to {-moz-transform: translate(0, -0px);}
}

.img-circle:hover{
    display: inline-block;
    position: absolute;
    cursor: pointer;
    left: 0px;
    top: 100%;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, .4);
    text-align: center;
}
.quote{
    bottom:34vh;
    position:relative;
}
.moreProjectsLink {
    font-family: sans-serif;
    font-size: 20px;
    line-height: 1.42857143;
    color: #5a5a5a;
}
.modalIcons{
    top:2vh;
}
.WaltDisney{
    bottom:35vh;
    color:grey;
    position:relative;
}
.triangle{
    top:-2vh;
    position:relative;
}
.StarWars{
    margin-top:9vh;
}
.Cars{
    margin-top:16vh;
}
.JustMarried{
    margin-top:19vh;
}

